# typing-defense

./: .gitignore  Cargo.toml  README.md  Trunk.toml  _config.yml  index.html  rustc-ice-2024-02-21T08_16_57-25110.txt  typing_defense-65ebafe7598ff51.js  typing_defense-ad4b8f1333e4c5b5.js
.cargo/: config.toml
.github/: deploy_page.yaml
.github/workflows/: release.yaml  tests.yml  typing_defense_tests.yml
assets/words/: thousand_most_frequent_words.words.toml
src/: castle.rs  enemies.rs  game.rs  main.rs  menu.rs  systems.rs
src/castle/: systems.rs
src/enemies/: components.rs  resources.rs  systems.rs
src/game/: boss.rs  castle.rs  decorations.rs  effects.rs  enemies.rs  hud.rs  rounds.rs  rounds_and_indicators.rs  systems.rs
src/game/boss/: components.rs  systems.rs
src/game/castle/: components.rs  resources.rs  systems.rs
src/game/decorations/: components.rs  systems.rs
src/game/effects/: components.rs  systems.rs
src/game/enemies/: components.rs  movement.rs  resources.rs  systems.rs  text.rs
src/game/enemies/movement/: components.rs  systems.rs
src/game/enemies/text/: components.rs  systems.rs
src/game/hud/: components.rs  resources.rs  systems.rs
src/game/rounds/: resources.rs  systems.rs
src/game/rounds_and_indicators/: resources.rs  systems.rs
src/menu/: components.rs  systems.rs
web/: sound.js  styles.css
